# AdventOfCode2024

./: .gitignore  CMakeLists.txt
Base/: CMakeLists.txt  CommonIncludes.cpp  CommonIncludes.h
Day1/: CMakeLists.txt  Day1.cpp  Day1.h
Day2/: CMakeLists.txt  Day2.cpp  Day2.h
Day3/: CMakeLists.txt  Day3.cpp  Day3.h
Day4/: CMakeLists.txt  Day4.cpp
